--- a/project_one/ml_explainability_demo.ipynb
+++ b/project_one/ml_explainability_demo.ipynb
@@ -422,7 +422,7 @@
    "source": [
     "import os\n",
     "# Set GROQ_API_KEY environment variable\n",
-    "os.environ['GROQ_API_KEY'] = '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'"
+    "os.environ['GROQ_API_KEY'] = ''"
    ]
   },
   {
