Changed text statement

--- a/project_one/ml_explainability_demo.ipynb
+++ b/project_one/ml_explainability_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e601230e",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
     "# ==============================\n",
     "# Step 1: Environment Setup\n",
     "# ==============================\n",
-    "# Install dependencies (run once per environment)\n",
+    "# Install required dependencies\n",
     "%pip install plotsense ucimlrepo scikit-learn pandas matplotlib\n"
    ]
   },
